# Parallel-MCTS

./: .gitignore  Agent.h  CMakeLists.txt  Log.h  MCTS.h  MCTS_UnitTest.cpp  Makefile  Policy.h  README.md  TreeNode.h  board.h  codecov.yml  config.h  cov.sh  main.cpp  mcts  script.sh  test1.cpp
.github/: codecov.yml
.github/workflows/: c-cpp.yml  cmake.yml
script/: cov.sh  record.sh
src/: Agent.h  Log.h  MCTS.h  ParallelLeaf.h  ParallelRoot.h  ParallelTree.h  Policy.h  TreeNode.h  board.h  config.h  main.cpp
test/: MCTS_UnitTest.cpp
unittest/: MCTS_UnitTest.cpp
